종목상세 페이지 백엔드 구현

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Finapp</title>
+    <title>{{ticker}} 상세페이지</title>
     <meta name="description" content="Finapp HTML Mobile Template">
     <meta name="keywords"
         content="bootstrap, wallet, banking, fintech mobile template, cordova, phonegap, mobile, html, responsive" />
@@ -34,7 +34,7 @@
             </a>
         </div>
         <div class="pageTitle">
-            Bitcoin (BTC)
+            {{ticker}} ({{name}})
         </div>
         <div class="right">
             <a href="app-notifications.html" class="headerButton" data-bs-toggle="modal"
