종목상세 페이지 차트 & 상세정보 구현

--- a/src/main/resources/templates/portfolio.html
+++ b/src/main/resources/templates/portfolio.html
@@ -182,7 +182,15 @@
     </div>
     <!-- * App Capsule -->
 
-
+    <!-- app footer -->
+    <div class="appFooter">
+        <div class="footer-title">
+            Copyright © Hoo 2024. All Rights Reserved.
+        </div>
+        권영후 개인 웹프로젝트
+    </div>
+    <!-- * app footer -->
+    
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
         <a href="index.html" class="item">
