--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -128,6 +128,18 @@ a:hover, a:active, a:focus {
   padding: 0 10px;
 }
 
+.appHeader .pageTitleContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.name, .ticker {
+  display: block;
+}
+
 .appHeader .pageTitle .logo {
   max-height: 24px;
 }
@@ -5434,6 +5446,7 @@ textarea,
 
 .blog-card .text {
   padding: 12px 16px;
+  height: 300px;
 }
 
 .blog-card .title {
