--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -205,7 +205,15 @@
         </div>
     </div>
     <!-- * Share Action Sheet -->
-
+    
+    <!-- app footer -->
+    <div class="appFooter">
+        <div class="footer-title">
+            Copyright © Hoo 2024. All Rights Reserved.
+        </div>
+        권영후 개인 웹프로젝트
+    </div>
+    <!-- * app footer -->
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
