종목상세 등락률 부호 색상 수정

--- a/python/flask_server/templates/report.html
+++ b/python/flask_server/templates/report.html
@@ -49,7 +49,7 @@
 
         <div class="section mt-2">
             <h1>
-                NVDA 데일리 리포트
+                {{ ticker }} 데일리 리포트
             </h1>
             <div class="blog-header-info mt-2 mb-2">
                 <div>
@@ -92,55 +92,6 @@
                 <ion-icon name="share-outline"></ion-icon> Share This Post
             </a>
         </div>
-
-
-        <div class="section mt-3">
-            <h2>Related Posts</h2>
-            <div class="row mt-3">
-                <div class="col-6 mb-2">
-                    <a href="app-blog-post.html">
-                        <div class="blog-card">
-                            <img src="{{ url_for('static', filename='/img/sample/photo/1.jpg') }}" alt="image" class="imaged w-100">
-                            <div class="text">
-                                <h4 class="title">What will be the value of bitcoin in the next...</h4>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-6 mb-2">
-                    <a href="app-blog-post.html">
-                        <div class="blog-card">
-                            <img src="{{ url_for('static', filename='/img/sample/photo/2.jpg') }}" alt="image" class="imaged w-100">
-                            <div class="text">
-                                <h4 class="title">Rules you need to know in business</h4>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-6 mb-2">
-                    <a href="app-blog-post.html">
-                        <div class="blog-card">
-                            <img src="{{ url_for('static', filename='/img/sample/photo/3.jpg') }}" alt="image" class="imaged w-100">
-                            <div class="text">
-                                <h4 class="title">10 easy ways to save your money</h4>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-6 mb-2">
-                    <a href="app-blog-post.html">
-                        <div class="blog-card">
-                            <img src="{{ url_for('static', filename='/img/sample/photo/4.jpg') }}" alt="image" class="imaged w-100">
-                            <div class="text">
-                                <h4 class="title">Follow the financial agenda with...</h4>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-
     </div>
     <!-- * App Capsule -->
 
